--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
-*.orig
+.orig
 
 # Created by git when using merge tools for conflicts
-*.BACKUP.*
-*.BASE.*
-*.LOCAL.*
-*.REMOTE.*
-*_BACKUP_*.txt
-*_BASE_*.txt
+.BACKUP
+.BASE
+.LOCAL
+.REMOTE
+_BACKUP_.txt
+_BASE_.txt
 *_LOCAL_*.txt
-*_REMOTE_*.txt
+_REMOTE_*.txt
 
 ### Linux ###
 *~
